Attempt to set the JAVA_HOME based on the java8.home system property.