@@ -79,10 +79,6 @@
         <!-- Keep consistent with README.md and .mvn/wrapper/maven-wrapper.properties -->
         <maven.min.version>3.6.0</maven.min.version>
 
-        <!-- Modularized JDK support (various workarounds) - activated via profile -->
-        <modular.jdk.args></modular.jdk.args>
-        <modular.jdk.props></modular.jdk.props>
-
         <!--
             See ChildFirstClassLoaderBuilder in model-test for the explanation of the org.jboss.model.test.cache.root and org.jboss.model.test.classpath.cache properties.
             If used in conjunction with org.jboss.model.test.classpath.cache -Dorg.jboss.model.test.cache.strict on the command line, transformers tests must
@@ -107,7 +103,7 @@
 
         <!-- Surefire args -->
         <surefire.jpda.args></surefire.jpda.args>
-        <surefire.system.args>${modular.jdk.args} ${modular.jdk.props} -ea -Duser.region=US -Duser.language=en -Duser.timezone=America/Chicago -XX:MaxMetaspaceSize=256m
+        <surefire.system.args>-ea -Duser.region=US -Duser.language=en -Duser.timezone=America/Chicago -XX:MaxMetaspaceSize=256m
             ${surefire.jpda.args} ${surefire.jacoco.args}
         </surefire.system.args>
         <test.level>INFO</test.level>
@@ -2296,21 +2292,6 @@
 
     <!-- Profiles -->
     <profiles>
-        <!--
-          Name: JDK9+
-          Descr: various workarounds activation for JDK9 and up
-        -->
-        <profile>
-            <id>JDK9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-                <!-- match 9+ -->
-            </activation>
-            <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-modules=java.se</modular.jdk.args>
-            </properties>
-        </profile>
         <!--
           Name: jpda
           Descr: Enable JPDA remote debuging
